--- a/style.css
+++ b/style.css
@@ -199,7 +199,7 @@ body {
 }
 /* width */
 ::-webkit-scrollbar {
-  width: 8px;
+  width: 10px;
 }
 /* Track */
 ::-webkit-scrollbar-track {
